crates/valen-parser/tests/snapshots/parser__match_with_guard.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f(x: Int) -> Int { match x { n if n > 0 => n, _ => 0 } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [
                Param {
                    name: "x",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "Int",
                                    generics: [],
                                    span: Span {
                                        start: 8,
                                        end: 11,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 8,
                                end: 11,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    span: Span {
                        start: 5,
                        end: 11,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Int",
                                generics: [],
                                span: Span {
                                    start: 16,
                                    end: 19,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 16,
                            end: 19,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Match(
                            MatchExpr {
                                scrutinee: Path(
                                    Path {
                                        segments: [
                                            PathSegment {
                                                name: "x",
                                                double_colon: false,
                                                generics: [],
                                                span: Span {
                                                    start: 28,
                                                    end: 29,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 28,
                                            end: 29,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                arms: [
                                    MatchArm {
                                        pattern: Binding(
                                            BindingPattern {
                                                name: "n",
                                                mutable: false,
                                                span: Span {
                                                    start: 32,
                                                    end: 33,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        guard: Some(
                                            Binary(
                                                BinaryExpr {
                                                    op: Gt,
                                                    lhs: Path(
                                                        Path {
                                                            segments: [
                                                                PathSegment {
                                                                    name: "n",
                                                                    double_colon: false,
                                                                    generics: [],
                                                                    span: Span {
                                                                        start: 37,
                                                                        end: 38,
                                                                        file_id: FileId(
                                                                            0,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                            span: Span {
                                                                start: 37,
                                                                end: 38,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    rhs: Literal(
                                                        Int(
                                                            0,
                                                            Span {
                                                                start: 41,
                                                                end: 42,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                    span: Span {
                                                        start: 37,
                                                        end: 42,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                        body: Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "n",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 46,
                                                            end: 47,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 46,
                                                    end: 47,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 32,
                                            end: 47,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                    MatchArm {
                                        pattern: Wildcard(
                                            Span {
                                                start: 49,
                                                end: 50,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        ),
                                        guard: None,
                                        body: Literal(
                                            Int(
                                                0,
                                                Span {
                                                    start: 54,
                                                    end: 55,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            ),
                                        ),
                                        span: Span {
                                            start: 49,
                                            end: 55,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 22,
                                    end: 57,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 20,
                        end: 59,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 59,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
