crates/valen-parser/tests/snapshots/parser__null_literal.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn main() { unsafe { null } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "main",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Unsafe(
                            UnsafeExpr {
                                body: Block(
                                    Block {
                                        stmts: [],
                                        tail: Some(
                                            Literal(
                                                Null(
                                                    Span {
                                                        start: 21,
                                                        end: 25,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                        span: Span {
                                            start: 19,
                                            end: 27,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 12,
                                    end: 27,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 10,
                        end: 29,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            is_inline: false,
            span: Span {
                start: 0,
                end: 29,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
