crates/valen-parser/tests/snapshots/parser__nullable_type.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn find(id: Int) -> String? { id }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "find",
            generics: [],
            params: [
                Param {
                    name: "id",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "Int",
                                    generics: [],
                                    span: Span {
                                        start: 12,
                                        end: 15,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 12,
                                end: 15,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    span: Span {
                        start: 8,
                        end: 15,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Nullable {
                    inner: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "String",
                                    generics: [],
                                    span: Span {
                                        start: 20,
                                        end: 26,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 20,
                                end: 26,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    span: Span {
                        start: 20,
                        end: 27,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Path(
                            Path {
                                segments: [
                                    PathSegment {
                                        name: "id",
                                        double_colon: false,
                                        generics: [],
                                        span: Span {
                                            start: 30,
                                            end: 32,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 30,
                                    end: 32,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 28,
                        end: 34,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 34,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
